# system-design-interview

./: Dockerfile  PRD.md  README.md  commiter.py  config.py  file_writer.py  generator.py  main.py  pyproject.toml  systems.py  test_remote_ollama.py
questions/: day_001_discord.md  day_002_whatsapp.md  day_003_twitter_x.md  day_004_instagram.md  day_005_facebook_feed.md  day_006_tiktok_抖音.md  day_007_snapchat.md  day_008_linkedin.md  day_009_reddit.md  day_010_telegram.md  day_011_微信_wechat.md  day_012_微博_weibo.md  day_013_小红书.md  day_014_slack.md  day_015_zoom.md  day_016_youtube.md  day_017_netflix.md  day_018_spotify.md  day_019_twitch_直播平台.md  day_020_bilibili.md  day_021_爱奇艺.md  day_022_播客平台_podcast.md  day_023_直播带货系统.md  day_024_短视频推荐系统.md  day_025_dropbox.md  day_026_google_drive.md  day_027_icloud.md  day_028_pastebin_文本分享.md  day_029_图片托管服务_imgur.md  day_030_google_搜索引擎.md  day_031_elasticsearch_全文检索系统.md  day_032_图片搜索引擎.md  day_033_今日头条_信息流推荐.md  day_034_商品搜索系统_电商.md  day_035_amazon_购物车与结算.md  day_036_支付宝.md  day_037_微信支付.md  day_038_stripe_支付系统.md  day_039_淘宝_天猫.md  day_040_拼多多秒杀系统.md  (+60 more)
