[project]
name = "system-design-interview"
version = "1.0.0"
description = "Auto-generate system design interview questions and solutions via local LLM"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
generate = "main:run"

[tool.ruff]
line-length = 100
target-version = "py310"
